# mrs_course

./: .gitignore  README.md  README_2nd_part.md
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  run_docker.sh  start_docker.sh
docker/to_copy/: aliases  tmux.conf
src/sphero_simulation/: .gitignore  README.md
src/sphero_simulation/sphero_description/: CMakeLists.txt  package.xml
src/sphero_simulation/sphero_stage/: README.md  package.xml  setup.cfg  setup.py
src/sphero_simulation/sphero_stage/config/maps/hard_maze_10x10/: hard_maze_10x10.yaml
src/sphero_simulation/sphero_stage/config/maps/simple_maze_10x10/: simple_maze_10x10.yaml
src/sphero_simulation/sphero_stage/config/world_templates/: empty_10x10.temp  empty_3x3.temp  hard_maze_10x10.temp  random_10x10.temp  simple_maze_10x10.temp  test_10x10.temp
src/sphero_simulation/sphero_stage/config/worlds/: definitions.inc
src/sphero_simulation/sphero_stage/launch/: example.yml  launch_params.yaml  sphero_sim.rviz  start.launch.py
src/sphero_simulation/sphero_stage/sphero_stage/: robot_controller.py
